<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMahasiswaActivity2">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/tv0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvM"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"/>
            <TextView
                android:id="@+id/tvJu"
                android:textSize="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama11"/>
            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvNim"
                android:textSize="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nim"/>
            <EditText
                android:id="@+id/etNim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Silahkan isi"
                android:inputType="text" />
            <TextView
                android:id="@+id/tv3"
                android:textSize="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/namaM"/>
            <EditText
                android:id="@+id/etNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Silahkan isi"
                android:inputType="text" />
            <TextView
                android:id="@+id/tv4"
                android:textSize="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tgl"/>
            <EditText
                android:id="@+id/etTgl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="date" />
            <TextView
                android:id="@+id/tvJk"
                android:textSize="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama12"/>
            <Spinner
                android:id="@+id/spinner4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <Button
                android:id="@+id/submit3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:text="Submit"
                android:textColorHint="#000000" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>