<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/item2"
   >

    <ImageView
        android:id="@+id/imUser"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/akun" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toRightOf="@+id/imUser">
        <TextView
            android:id="@+id/tvUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/namaMa"
            />
        <TextView
            android:id="@+id/tvJurusan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/namaJurusan"
            />
        <TextView
            android:id="@+id/tvNim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/namaNim"
            />
<!--        <TextView-->
<!--            android:id="@+id/tvJk"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/namaJk"-->
<!--            />-->
<!--        <TextView-->
<!--            android:id="@+id/tvTgl"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/namaTgl"-->
<!--            />-->

    </LinearLayout>



</RelativeLayout>