<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/images"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#FAF6F9">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/akun7"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="#00BCD4"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:padding="30dp">

                        <ImageView
                            android:id="@+id/fakultas"
                            android:layout_centerHorizontal="true"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/fakultas2" />

                        <TextView
                            android:id="@+id/tvFaku"
                            android:layout_centerHorizontal="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/fakultas"
                            android:layout_centerVertical="true"
                            android:text="@string/nama1" />

                    </RelativeLayout>


                    <RelativeLayout
                        android:id="@+id/akun8"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="30dp"
                        android:layout_margin="5dp"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:background="@color/colorAccent">
                        <ImageView
                            android:id="@+id/jurusan"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/jurusan" />
                        <TextView
                            android:id="@+id/tvJurusan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/nama2"
                            android:layout_below="@+id/jurusan" />

                    </RelativeLayout>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#FAF6F9">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/akun9"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="30dp"
                        android:layout_margin="5dp"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:background="#DD78E8">
                        <ImageView
                            android:id="@+id/imUser9"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/akun" />
                        <TextView
                            android:id="@+id/tvUser9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/nama3"
                            android:layout_centerVertical="true"
                            android:layout_below="@+id/imUser9" />

                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/akun10"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="30dp"
                        android:layout_margin="5dp"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:background="@color/colorAccent">
                        <ImageView
                            android:id="@+id/imBrowser"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/browser" />
                        <TextView
                            android:id="@+id/tvBrowser"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/browser"
                            android:layout_below="@+id/imBrowser" />

                    </RelativeLayout>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>




</androidx.coordinatorlayout.widget.CoordinatorLayout>